--- a/.github/wf_runner.yml
+++ b/.github/wf_runner.yml
@@ -3,6 +3,7 @@ name: Run CBB data R script
 on:
   schedule:
     - cron: '0 9 * * *'  
+  workflow_dispatch:
 
 jobs:
   run-r-script:
@@ -22,4 +23,4 @@ jobs:
     - name: Run R script
       run: store_cbb_odds.R  
       env:
-        API_KEY: ${{ secrets.API_KEY }} 
+        API_KEY: ${{ secrets.ODDS_API_KEY}} 
