--- a/.github/workflows/wf_runner.yml
+++ b/.github/workflows/wf_runner.yml
@@ -15,6 +15,8 @@ jobs:
 
     - name: Set up R
       uses: r-lib/actions/setup-r@v1
+      with:
+        r-version: 4.1.2
 
     - name: Install dependencies
       run: |
