--- a/.github/workflows/wf_runner.yml
+++ b/.github/workflows/wf_runner.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Install dependencies
       run: |
         Rscript -e "install.packages(c('DBI', 'RSQLite', 'dplyr', 'data.table', 'stringr'))"
-                -e "if(!requireNamespace('pacman', quietly = TRUE)){install.packages('pacman')} pacman::p_load_current_gh('sportsdataverse/oddsapiR')"
+        Rscript -e "if(!requireNamespace('pacman', quietly = TRUE)){install.packages('pacman')} pacman::p_load_current_gh('sportsdataverse/oddsapiR')"
 
     - name: Run R script
       run: Rscript store_cbb_odds.R  
