--- a/.github/workflows/wf_runner.yml
+++ b/.github/workflows/wf_runner.yml
@@ -19,8 +19,8 @@ jobs:
     - name: Install dependencies
       run: |
         Rscript -e "install.packages(c('DBI', 'RSQLite', 'dplyr', 'data.table', 'stringr'))"
-        Rscript -e "if(!requireNamespace('pacman', quietly = TRUE)){install.packages('pacman')}"
-        Rscript -e "pacman::p_load_current_gh('sportsdataverse/oddsapiR')"
+        Rscript -e "if(!requireNamespace('devtools', quietly = TRUE)){install.packages('devtools')}"
+        Rscript -e "devtools::install_github(repo = 'sportsdataverse/oddsapiR')"
 
     - name: Run R script
       run: Rscript store_cbb_odds.R  
