--- a/.github/workflows/wf_runner.yml
+++ b/.github/workflows/wf_runner.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Install dependencies
       run: |
         Rscript -e "install.packages(c('DBI', 'RSQLite', 'dplyr', 'data.table', 'stringr', 'remotes'))"
-        Rscript -e "remotes::install_github(sportsdataverse/oddsapiR)"
+        Rscript -e "remotes::install_github(https://github.com/sportsdataverse/oddsapiR)"
 
     - name: Run R script
       run: Rscript store_cbb_odds.R  
