--- a/.github/workflows/wf_runner.yml
+++ b/.github/workflows/wf_runner.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Install dependencies
       run: |
         Rscript -e "install.packages(c('DBI', 'RSQLite', 'dplyr', 'data.table', 'stringr', 'remotes', 'pacman'))"
-        Rscript -e "pacman::p_load_current_gh('sportsdataverse/oddsapiR')"
+        Rscript -e "remotes::install_github('sportsdataverse/oddsapiR')"
 
     - name: Run R script
       run: Rscript store_cbb_odds.R  
