--- a/.github/workflows/wf_runner.yml
+++ b/.github/workflows/wf_runner.yml
@@ -18,7 +18,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        Rscript -e "install.packages(c('DBI', 'RSQLite', 'dplyr', 'data.table', 'stringr', 'devtools'))"
+        Rscript -e "install.packages(c('DBI', 'RSQLite', 'dplyr', 'data.table', 'stringr', 'rtools', 'devtools'))"
         Rscript -e "devtools::install_github(repo = 'sportsdataverse/oddsapiR')"
 
     - name: Run R script
