--- a/.github/workflows/wf_runner.yml
+++ b/.github/workflows/wf_runner.yml
@@ -1,8 +1,8 @@
 name: Run CBB data R script
 
 on:
-  schedule:
-    - cron: '0 9 * * *'  
+  #schedule:
+  #  - cron: '0 9 * * *'  
   workflow_dispatch:
 
 jobs:
